MergeAssets accepts a directory as input
Reviewed By: mykola-semko

fbshipit-source-id: 7a71e4d6f215d3652fbd4d8d7e38be028d18c878